# license-plate-generator

./: README.md  pyproject.toml
src/license-plate-generator/: license_plate_generator.py
src/license_plate_generator/: main.py
