[project]
name = "license-plate-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "TNTBoss971",email = "w.samuel.davidson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "license_plate_generator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
